# Jedi-Academy-Renaissance

./: .gitignore  CMakeLists.txt  README  README.md  WikiExport-2012-11-24.xml  cmake_debug.bat  cmake_debug.sh  coding guidelines.txt  credits.txt  dependencies.txt  folders.txt  keep in mind.txt  license.txt  luabind.cbp  luabind.workspace  makefile.linux  makefile.mingw  menu inspiration.txt  pdep.c  pluto.c  pluto.cbp  pluto.h  qwoccer ideas.txt  readme.txt  thoughts on scripting.txt  what to do next.txt
code/jarlib/: CMakeLists.txt  jar-audio.cbp  jar-audio.vcxproj  jar-audio.vcxproj.filters  jar-core.cbp  jar-core.layout  jar-core.vcxproj  jar-core.vcxproj.filters  jar-graphics.cbp  jar-graphics.vcxproj  jar-graphics.vcxproj.filters  jar-input.cbp  jar-input.vcxproj  jar-input.vcxproj.filters
code/jarlib/include/jar/: Audio.hpp  Core.hpp  CoreImpl.hpp  Globals.hpp  Graphics.hpp  Input.hpp  Jar.hpp  OS.hpp  Physics.hpp  jar.hpp
code/jarlib/include/jar/audio/: API.hpp  AudioImpl.hpp  LuaSound.hpp
code/jarlib/include/jar/core/: API.hpp  CLArguments.hpp  Component.hpp  CoreImpl.hpp  CoutAndFileLogger.hpp  CoutLogger.hpp  FileLogger.hpp  FileSystem.hpp  GetLuabindInfo.hpp  Helpers.hpp  Logger.hpp  Lua.hpp  LuaLogger.hpp  Singleton.hpp  Time.hpp  Updatable.hpp  VoidLogger.hpp
code/jarlib/include/jar/graphics/: API.hpp  Font.hpp  GraphicsImpl.hpp  RenderWindow.hpp  SimpleLevel.hpp  Text.hpp  TextureManager.hpp  g2CompBone.hpp  g2Model.hpp
code/jarlib/include/jar/input/: API.hpp  Event.hpp  EventListener.hpp  EventManager.hpp  EventQueue.hpp  EventRelay.hpp  EventSender.hpp  InputDevice.hpp  InputDeviceController.hpp  InputDeviceJoystick.hpp  InputDeviceKeyboard.hpp  InputDeviceManager.hpp  InputDeviceMouse.hpp  InputImpl.hpp  KeyCodes.hpp
code/jarlib/include/jar/luabind/: Core.hpp  SFMLGraphics.hpp
code/jarlib/include/jar/physics/: API.hpp  Defines.hpp  PhysicsImpl.hpp  PhysicsWorld.hpp
code/jarlib/src/jar/: Audio.cpp  Core.cpp  CoreImpl.cpp  Globals.cpp  Graphics.cpp  Input.cpp  Physics.cpp
code/jarlib/src/jar/Audio/: AudioImpl.cpp
code/jarlib/src/jar/audio/: AudioImpl.cpp  LuaSound.cpp
code/jarlib/src/jar/core/: CLArguments.cpp  Component.cpp  CoreImpl.cpp  CoutAndFileLogger.cpp  CoutLogger.cpp  FileLogger.cpp  Lua.cpp  (+7 more)
code/renaissance/: CMakeLists.txt  renaissance.cbp  renaissance.vcxproj  renaissance.vcxproj.filters
code/renaissance/include/: SimpleLevel.hpp
code/renaissance/src/: LBSimpleLevel.cpp  SimpleLevel.cpp  main.cpp
code/renaissance/src/luabind/: LBSFMLGraphics.cpp  LBg2Model.cpp
codemp/cgame/: CMakeLists.txt  animtable.cpp  animtable.h  cg_consolecmds.cpp  cg_cvar.cpp  cg_draw.cpp  cg_drawtools.cpp  cg_effects.cpp  cg_ents.cpp  cg_event.cpp  cg_info.cpp  cg_light.cpp  cg_local.h  cg_localents.cpp  cg_main.cpp  cg_marks.cpp  cg_newDraw.cpp  cg_players.cpp  cg_playerstate.cpp  cg_predict.cpp  cg_public.h  cg_saga.cpp  cg_scoreboard.cpp  cg_servercmds.cpp  cg_snapshot.cpp  cg_spawn.cpp  cg_turret.cpp  cg_view.cpp  cg_weaponinit.cpp  cg_weapons.cpp  cg_xcvar.h  fx_blaster.cpp  fx_bowcaster.cpp  fx_bryarpistol.cpp  fx_demp2.cpp  fx_disruptor.cpp  fx_flechette.cpp  fx_force.cpp  fx_heavyrepeater.cpp  fx_rocketlauncher.cpp
codemp/game/: AnimalNPC.cpp  CMakeLists.txt  FighterNPC.cpp  NPC.cpp  NPC_AI_Atst.cpp  NPC_AI_Default.cpp  NPC_AI_Droid.cpp  NPC_AI_GalakMech.cpp  NPC_AI_Grenadier.cpp  NPC_AI_Howler.cpp  NPC_AI_ImperialProbe.cpp  NPC_AI_Interrogator.cpp  NPC_AI_Jedi.cpp  NPC_AI_Mark1.cpp  NPC_AI_Mark2.cpp  NPC_AI_MineMonster.cpp  NPC_AI_Rancor.cpp  NPC_AI_Remote.cpp  NPC_AI_Seeker.cpp  NPC_AI_Sentry.cpp  NPC_AI_Sniper.cpp  NPC_AI_Stormtrooper.cpp  NPC_AI_Utils.cpp  NPC_AI_Wampa.cpp  NPC_behavior.cpp  NPC_combat.cpp  NPC_goal.cpp  NPC_move.cpp  NPC_reactions.cpp  NPC_senses.cpp  NPC_sounds.cpp  NPC_spawn.cpp  NPC_stats.cpp  NPC_utils.cpp  SpeederNPC.cpp  WalkerNPC.cpp  ai_main.cpp  ai_util.cpp  ai_wpnav.cpp  bg_g2_utils.cpp  (+50 more)
codemp/ui/: CMakeLists.txt  ui_atoms.cpp  ui_cvar.cpp  ui_force.cpp  ui_gameinfo.cpp  ui_local.h  ui_main.cpp  ui_public.h  ui_saber.cpp  ui_shared.cpp  ui_shared.h  ui_xcvar.h
dependencies/lua-5.1.4-jar/: CMakeLists.txt  Lua.cbp  jar-lua.cbp  jar-lua.sln  jar-lua.vcxproj  jar-lua.vcxproj.filters
dependencies/lua-5.1.4-jar/include/: lua.h
dependencies/lua-5.1.4-jar/src/: ldblib.c  ldebug.c  ldo.c  lfunc.c  llex.c  lmem.c  lopcodes.c  lopcodes.h  lparser.c  lstate.c  ltable.c  ltm.c  lua.h  luaconf.h  lundump.c  lvm.c
dependencies/luabind-jar/: .gitignore  CMakeLists.txt  luabind-mrw.sln  luabind-mrw.vcxproj
dependencies/luabind-jar/examples/class_info/: example_class_info.cbp
dependencies/luabind-jar/luabind/: out_value_policy.hpp
dependencies/luabind-jar/luabind/detail/: call_function.hpp  class_rep.hpp
dependencies/luabind-jar/src/: CMakeLists.txt  function_introspection.cpp
dependencies/luabind-jar/test/: test_abstract_base.cbp  test_adopt_wrapper.cbp  test_attributes.cpp  test_automatic_smart_ptr.cbp  test_back_reference.cbp  test_builtin_converters.cbp  test_class_info.cbp  test_collapse_converter.cbp  test_const.cbp  test_construction.cbp  test_create_in_thread.cbp  test_def_from_base.cbp  test_dynamic_type.cbp  test_exceptions.cbp  test_extend_class_in_lua.cbp  test_free_functions.cbp  test_function_introspection.cbp  test_held_type.cbp  test_implicit_cast.cbp  test_implicit_raw.cbp  test_iterator.cbp  test_lua_classes.cbp  test_null_pointer.cbp  test_object.cbp  test_object_identity.cbp  test_package_preload.cbp  test_policies.cbp  test_private_destructors.cbp  test_properties.cbp  test_scope.cbp  test_set_instance_value.cbp  test_shadow.cbp  test_shared_ptr.cbp  test_simple_class.cbp  test_super_leak.cbp  test_table.cbp  test_typetraits.cbp  test_unsigned_int.cbp  test_user_defined_converter.cbp  test_value_wrapper.cbp  (+3 more)
dependencies/minizip-jar/: CMakeLists.txt  MiniZip64_info.txt  jar-minizip.vcxproj  minizip-jar.cbp  unzip.c  unzip.h
dependencies/pluto-jar/: CHANGELOG  CMakeLists.txt  jar-pluto.cbp  makefile.macosx  pluto-jar.sln  pluto-jar.vcxproj  pluto.c  pluto.h  pptest.lua  puptest.lua
(+355 files in other folders)
